# diamond-gl

./: .gitignore  CMakeLists.txt  README.md
include/: buffer.hpp  managment.hpp  opengl.hpp  program.hpp  state.hpp  texture.hpp  vertex_array.hpp
include/diamond/: all.hpp  buffer.hpp  command.hpp  enums.hpp  managment.hpp  opengl.hpp  program.hpp  state.hpp  texture.hpp  vertex_array.hpp
legacy/diamond/: all.hpp  buffer.hpp  command.hpp  state.hpp  vertex_array.hpp
source/examples/: triangle.cpp
